[tool.poetry]
name = "ml-fundamentals"
version = "0.1.0"
description = ""
authors = ["jmoro-aecom <131449199+jmoro-aecom@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "ml_fundamentals"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.1"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.0"
jupyter = "^1.0.0"
pandas = "^2.1.2"
seaborn = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
